Update info buttons

--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -113,9 +113,7 @@ a {
 }
 
 #saveBtn:hover,
-#saveBtn:active,
-#websiteBtn:hover,
-#websiteBtn:active {
+#websiteBtn:hover {
   background-color: #855d12;
   border-color: #855d12;
   color: white;
